# codestat

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
docs/: core.md  models.md
docs/analyzers/: base-analyzer.md  generic-analyzer.md  markdown-analyzer.md  python-analyzer.md
src/project_analyzer/: __init__.py  __main__.py  cli.py  core.py  models.py  reporters.py
src/project_analyzer/analyzers/: __init__.py  base.py  generic.py  language_config.py  markdown.py  python.py
tests/: __init__.py  test_models.py
tests/analyzer/: test_markdown.py
